--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=api_laravel_11
+DB_PORT=8889
+DB_DATABASE=api_laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
